<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:textAlignment="center"
        android:id="@+id/coordinator_layout">

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>